ANode/test/data/SMSHOME2/good/good2.ecf
# sleep %SLEEPTIME test for uneven number for microcharacter's
sleep %SLEEPTIME%
# sleep %SLEEPTIME test for uneven number for microcharacter's
# %fred
# fred%
        # %%fred%
