ANode/test/data/SMSHOME2/bad/bad8.ecf
 
 
# test for uneven number for microcharacter's
 
sleep %SLEEPTIME

 
 